# ros2_basics_cpp

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_cpp_pkg/include/ros2_cpp_pkg/ros2_cpp_pkg/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/ros2_cpp_pkg/include/ros2_cpp_pkg/ros2_cpp_pkg/srv/: odd_even_check.h  odd_even_check.hpp
install/ros2_cpp_pkg/include/ros2_cpp_pkg/ros2_cpp_pkg/srv/detail/: odd_even_check__functions.c  odd_even_check__rosidl_typesupport_fastrtps_c.h  odd_even_check__struct.hpp  odd_even_check__traits.hpp  odd_even_check__type_support.c  odd_even_check__type_support.cpp  odd_even_check__type_support.h
install/ros2_cpp_pkg/lib/ros2_cpp_pkg/: publisher  publisher_rpm  service_client  service_server  subscriber  subscriber_rpm
install/ros2_cpp_pkg/local/lib/python3.10/dist-packages/ros2_cpp_pkg/: _ros2_cpp_pkg_s.ep.rosidl_typesupport_c.c  _ros2_cpp_pkg_s.ep.rosidl_typesupport_fastrtps_c.c  _ros2_cpp_pkg_s.ep.rosidl_typesupport_introspection_c.c
install/ros2_cpp_pkg/local/lib/python3.10/dist-packages/ros2_cpp_pkg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/ros2_cpp_pkg/local/lib/python3.10/dist-packages/ros2_cpp_pkg/srv/: _odd_even_check.py  _odd_even_check_s.c
install/ros2_cpp_pkg/share/ros2_cpp_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_cpp_pkg/share/ros2_cpp_pkg/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_ros2_cpp_pkg__rosidl_generator_cExport.cmake  export_ros2_cpp_pkg__rosidl_generator_cppExport.cmake  export_ros2_cpp_pkg__rosidl_generator_pyExport-noconfig.cmake  export_ros2_cpp_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ros2_cpp_pkg__rosidl_typesupport_fastrtps_cppExport.cmake  ros2_cpp_pkgConfig.cmake  ros2_cpp_pkg__rosidl_typesupport_cppExport-noconfig.cmake  ros2_cpp_pkg__rosidl_typesupport_cppExport.cmake  ros2_cpp_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/ros2_cpp_pkg/share/ros2_cpp_pkg/srv/: OddEvenCheck.idl  OddEvenCheck_Response.msg
log/: latest_build
ros2_cpp_pkg/: CMakeLists.txt  package.xml
ros2_cpp_pkg/action/: Navigate.action
ros2_cpp_pkg/launch/: rpm_node.launch.py  wheeled_model_simulation.launch.py
ros2_cpp_pkg/models/ground_plane/: ground_plane.sdf  model.config
ros2_cpp_pkg/models/project_robot_model/: model.sdf
ros2_cpp_pkg/models/wheeled_model/: model.sdf
ros2_cpp_pkg/src/: action_client.cpp  action_server.cpp  publisher.cpp  publisher_rpm.cpp  service_client.cpp  service_server.cpp  subscriber.cpp  subscriber_rpm.cpp  turn_camera_client.cpp  turn_camera_server.cpp
ros2_cpp_pkg/srv/: OddEvenCheck.srv
ros2_cpp_pkg/worlds/: project_world.sdf  test_world.sdf  wheeled_model_world.sdf
